--- a/contato.html
+++ b/contato.html
@@ -12,16 +12,7 @@
   <meta property="og:description" content="Compre sua bicicletas personalizada na Bikcraft. Possuimos diversos modelos como Passeio, Esporte e Retrô" />
   <meta property="og:url" content="https://bikcraft.com/" />
   <meta property="og:image" content="https://bikcraft.com/img/og-image.jpg" />
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/grid.css">
-  <link rel="stylesheet" href="css/style-raw.css">
-  <link rel="stylesheet" href="css/sobre.css">
-  <link rel="stylesheet" href="css/produtos.css">
-  <link rel="stylesheet" href="css/produtos-passeio.css">
-  <link rel="stylesheet" href="css/portofolio.css">
-  <link rel="stylesheet" href="css/contato.css">
-  <link rel="stylesheet" href="css/responsivo.css">
+  <link rel="stylesheet" href="css/style.css">
   <script>document.documentElement.classList.add("js");</script>
   <title>Contato</title>
 </head>
@@ -63,17 +54,17 @@
       </form>
       <div class="contato_info grid-8">
         <h3>Dados</h3>
-        <span>
+        <span class="contato-span">
           +55 21 9999-9999
         </span>
-        <span>
+        <span class="contato-span">
           contato@bikcraft.com
         </span>
         <div class="contato-child">
-          <span>
+          <span class="contato-span">
             Rua Ali Perto - Botafogo
           </span>
-          <span>
+          <span class="contato-span">
             Rio de Janeiro - RJ - Brasil
           </span>
         </div>
