--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/style-raw.css">
+  <link rel="stylesheet" href="css/sobre.css">
+  <link rel="stylesheet" href="css/produtos.css">
+  <link rel="stylesheet" href="css/produtos-passeio.css">
+  <link rel="stylesheet" href="css/portofolio.css">
+  <link rel="stylesheet" href="css/contato.css">
+  <link rel="stylesheet" href="css/responsivo.css">
   <script>document.documentElement.classList.add("js");</script>
 </head>
 
