--- a/produtos.html
+++ b/produtos.html
@@ -12,7 +12,16 @@
   <meta property="og:description" content="Compre sua bicicletas personalizada na Bikcraft. Possuimos diversos modelos como Passeio, Esporte e Retrô" />
   <meta property="og:url" content="https://bikcraft.com/" />
   <meta property="og:image" content="https://bikcraft.com/img/og-image.jpg" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/style-raw.css">
+  <link rel="stylesheet" href="css/sobre.css">
+  <link rel="stylesheet" href="css/produtos.css">
+  <link rel="stylesheet" href="css/produtos-passeio.css">
+  <link rel="stylesheet" href="css/portofolio.css">
+  <link rel="stylesheet" href="css/contato.css">
+  <link rel="stylesheet" href="css/responsivo.css">
   <script>document.documentElement.classList.add("js");</script>
   <title>Produtos</title>
 </head>
