--- a/portfolio.html
+++ b/portfolio.html
@@ -68,14 +68,14 @@
   <section class="portfolio">
     <div class="container" data-slide="portfolio">
       <ul class="portfolio-img">
-        <li class="grid-8"><img src="/img/portfolio/passeio.jpg" alt="Passeio"></li>
-        <li class="grid-8"><img src="/img/portfolio/retro.jpg" alt="Retrô"></li>
-        <li class="grid-16"><img src="/img/portfolio/esporte.jpg" alt="Esporte"></li>
+        <li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Passeio"></li>
+        <li class="grid-8"><img src="img/portfolio/retro.jpg" alt="Retrô"></li>
+        <li class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Esporte"></li>
       </ul>
       <ul class="portfolio-img">
-        <li class="grid-8"><img src="/img/portfolio/retro.jpg" alt="Retrô"></li>
-        <li class="grid-8"><img src="/img/portfolio/passeio.jpg" alt="Passeio"></li>
-        <li class="grid-16"><img src="/img/portfolio/esporte.jpg" alt="Esporte"></li>
+        <li class="grid-8"><img src="img/portfolio/retro.jpg" alt="Retrô"></li>
+        <li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Passeio"></li>
+        <li class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Esporte"></li>
       </ul>
     </div>
   </section>
@@ -107,9 +107,9 @@
         <div class="grid-4 footer_sociais">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/redes-sociais/facebook.svg" alt="facebook"></a></li>
-            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="/img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="/img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
           </ul>
         </div>
       </div>
