--- a/contato.html
+++ b/contato.html
@@ -80,9 +80,9 @@
         <div class="contato_sociais">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/redes-sociais/facebook.svg" alt="facebook"></a></li>
-            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="/img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="/img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
           </ul>
         </div>
       </div>
@@ -90,7 +90,7 @@
   </section>
   <div class="container contato_mapa">
     <div class="grid-16">
-      <a href="https://www.google.com.br/maps/preview"><img src="/img/endereco-bikcraft.jpg" alt=""></a>
+      <a href="https://www.google.com.br/maps/preview"><img src="img/endereco-bikcraft.jpg" alt=""></a>
     </div>
   </div>
   <footer>
@@ -111,9 +111,9 @@
         <div class="grid-4 footer_sociais">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/redes-sociais/facebook.svg" alt="facebook"></a></li>
-            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="/img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="/img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
           </ul>
         </div>
       </div>
