--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
     <ul class="produtos_lista">
       <li class="grid-1-3">
         <div class="produtos_lista_img">
-          <img src="/img/produtos/passeio.svg" alt="passeio">
+          <img src="img/produtos/passeio.svg" alt="passeio">
         </div>
         <h3 class="produtos-subtitulo">passeio</h3>
         <p class="produtos-descricao">Muito melhor do que passear na orla a vidros fechados.</p>
       </li>
       <li class="grid-1-3">
         <div class="produtos_lista_img">
-          <img src="/img/produtos/esporte.svg" alt="passeio">
+          <img src="img/produtos/esporte.svg" alt="passeio">
         </div>
         <h3 class="produtos-subtitulo">esporte</h3>
         <p class="produtos-descricao">Mais rápida que Forest Gump, ninguém vai pegar você.</p>
       </li>
       <li class="grid-1-3">
         <div class="produtos_lista_img">
-          <img src="/img/produtos/retro.svg" alt="passeio">
+          <img src="img/produtos/retro.svg" alt="passeio">
         </div>
         <h3 class="produtos-subtitulo">retrô</h3>
         <p class="produtos-descricao">O passado volta para lembrarmos o que devemos fazer no futuro.</p>
@@ -89,9 +89,9 @@
     <div class="container">
       <h2 class="portfolio-titulo">Portfólio</h2>
       <ul class="portfolio_lista">
-        <li class="grid-8"><img src="/img/portfolio/passeio.jpg" alt="Passeio"></li>
-        <li class="grid-8"><img src="/img/portfolio/retro.jpg" alt="Retro"></li>
-        <li class="grid-16"><img src="/img/portfolio/esporte.jpg" alt="Esporte"></li>
+        <li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Passeio"></li>
+        <li class="grid-8"><img src="img/portfolio/retro.jpg" alt="Retro"></li>
+        <li class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Esporte"></li>
       </ul>
       <div class="call">
         <p class="portfolio-p">Conheça mais nosso portfólio.</p>
@@ -101,7 +101,7 @@
   </section>
   <section class="qualidade container">
     <h2>Qualidade</h2>
-    <img src="/img/bikcraft-qualidade.svg" alt="Bikcraft Qualidade">
+    <img src="img/bikcraft-qualidade.svg" alt="Bikcraft Qualidade">
     <ul class=qualidade-lista>
       <li class="grid-1-3">
         <h3>Durabilidade</h3>
@@ -150,9 +150,9 @@
         <div class="grid-4 footer_sociais">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/redes-sociais/facebook.svg" alt="facebook"></a></li>
-            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="/img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="/img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
           </ul>
         </div>
       </div>
