--- a/produtos-passeio.html
+++ b/produtos-passeio.html
@@ -44,14 +44,14 @@
   </header>
   <section class="container produto_item">
     <div class="grid-11 produtos-passeio">
-      <a href="produtos-passeio.html"><img src="/img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft"></a>
+      <a href="produtos-passeio.html"><img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft"></a>
       <h2 class="h2-produto">Passeio</h2>
     </div>
     <div class="grid-5 logo-produto">
-      <img src="/img/produtos/passeio.svg" alt="">
+      <img src="img/produtos/passeio.svg" alt="">
     </div>
     <div class="grid-8 img-produtos">
-      <img src="/img/produtos/bikcraft-passeio-2.jpg" alt="">
+      <img src="img/produtos/bikcraft-passeio-2.jpg" alt="">
     </div>
     <div class="grid-8 produto_info">
       <p>Muito melhor do que passear pela orla a vidros fechados. A Bikcraft Passeio é uma bicicleta que une conforto e praticidade para o seu dia a dia. Você nunca mais vai querer saber de outra.</p>
@@ -126,9 +126,9 @@
         <div class="grid-4 footer_sociais">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/redes-sociais/facebook.svg" alt="facebook"></a></li>
-            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="/img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="/img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
           </ul>
         </div>
       </div>
