--- a/produtos.html
+++ b/produtos.html
@@ -51,25 +51,25 @@
   <section class="container produto_item">
 
     <div class="grid-11 produtos-passeio">
-      <a href="produtos-passeio.html"><img src="/img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft"></a>
+      <a href="produtos-passeio.html"><img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft"></a>
       <h2 class="h2-produto">Passeio</h2>
     </div>
     <div class="grid-5 logo-produto">
-      <img src="/img/produtos/passeio.svg" alt="">
+      <img src="img/produtos/passeio.svg" alt="">
     </div>
     <div class="grid-11 produtos-passeio">
-      <img src="/img/produtos/bikcraft-esporte-1.jpg" alt="Bikcraft">
+      <img src="img/produtos/bikcraft-esporte-1.jpg" alt="Bikcraft">
       <h2 class="h2-produto">Esporte</h2>
     </div>
     <div class="grid-5 logo-produto">
-      <img src="/img/produtos/esporte.svg" alt="">
+      <img src="img/produtos/esporte.svg" alt="">
     </div>
     <div class="grid-11 produtos-passeio">
-      <img src="/img/produtos/bikcraft-retro-1.jpg" alt="Bikcraft">
+      <img src="img/produtos/bikcraft-retro-1.jpg" alt="Bikcraft">
       <h2 class="h2-produto">Retrô</h2>
     </div>
     <div class="grid-5 logo-produto">
-      <img src="/img/produtos/retro.svg" alt="">
+      <img src="img/produtos/retro.svg" alt="">
     </div>
   </section>
   <section class="orcamento">
@@ -135,9 +135,9 @@
         <div class="grid-4 footer_sociais">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/redes-sociais/facebook.svg" alt="facebook"></a></li>
-            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="/img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="/img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
           </ul>
         </div>
       </div>
