--- a/sobre.html
+++ b/sobre.html
@@ -64,12 +64,12 @@
       </ul>
     </div>
     <div class="grid-16 equipe-sobre">
-      <img src="/img/equipe-bikcraft.jpg" alt="Equipe-Bikcraft">
+      <img src="img/equipe-bikcraft.jpg" alt="Equipe-Bikcraft">
     </div>
   </section>
   <section class="qualidade container">
     <h2>Qualidade</h2>
-    <img src="/img/bikcraft-qualidade.svg" alt="Bikcraft Qualidade">
+    <img src="img/bikcraft-qualidade.svg" alt="Bikcraft Qualidade">
     <ul class=qualidade-lista>
       <li class="grid-1-3">
         <h3>Durabilidade</h3>
@@ -114,9 +114,9 @@
         <div class="grid-4 footer_sociais">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/redes-sociais/facebook.svg" alt="facebook"></a></li>
-            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="/img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="/img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com/luizeri2/" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://twitter.com/login?lang=pt" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
           </ul>
         </div>
       </div>
